--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ngx-loading-bar/router": "^6.0.2",
     "angular-calendar": "~0.29.0",
     "apexcharts": "~3.35.3",
+    "chart.js": "^4.2.1",
     "date-fns": "~2.28.0",
     "highlight.js": "~11.5.1",
     "luxon": "~2.3.0",
