--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "angular-calendar": "~0.29.0",
     "apexcharts": "~3.35.3",
     "chart.js": "^4.2.1",
+    "crypto-js": "^4.1.1",
     "date-fns": "~2.28.0",
     "highlight.js": "~11.5.1",
     "luxon": "~2.3.0",
