--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@ngx-loading-bar/core": "^6.0.2",
     "@ngx-loading-bar/router": "^6.0.2",
     "angular-calendar": "~0.29.0",
+    "angular-responsive-carousel": "^2.1.2",
     "apexcharts": "~3.35.3",
     "chart.js": "^4.2.1",
     "date-fns": "~2.28.0",
+    "hammerjs": "^2.0.8",
     "highlight.js": "~11.5.1",
     "luxon": "~2.3.0",
     "ngx-currency": "^3.0.0",
