--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ngx-quicklink": "~0.2.7",
     "ngx-quill": "~17.0.0",
     "ngx-showdown": "^6.0.0",
+    "ngx-webcam": "^0.4.1",
     "quill": "~1.3.7",
     "rxjs": "^7.4.0",
     "showdown": "^1.9.1",
